--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "parcel build src/*.html --no-optimize"
   },
   "parcel-namer-custom": {
-    ".gif$": "[folder]/[name].[ext]",
-    ".png$": "[folder]/[name].[type]",
-    ".jpg$": "[folder]/[name].[type]",
-    ".css$": "[folder]/[name].[type]",
-    ".scss$": "[folder]/[name].[type]",
-    ".ts$": "[folder]/[name].[hash].[type]",
-    ".js$": "[folder]/[name].[type]"
+    ".gif$": "/[folder]/[name].[ext]",
+    ".png$": "/[folder]/[name].[type]",
+    ".jpg$": "/[folder]/[name].[type]",
+    ".css$": "/[folder]/[name].[type]",
+    ".scss$": "/[folder]/[name].[type]",
+    ".ts$": "/[folder]/[name].[hash].[type]",
+    ".js$": "/[folder]/[name].[type]"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.4.1",
