--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --no-optimize"
+    "build": "yarn clean && parcel build src/*.html --no-optimize",
+    "clean": "rimraf dist && rimraf .parcel-cache"
   },
   "parcel-namer-custom": {
     ".gif$": "/[folder]/[name].[ext]",
@@ -21,6 +22,7 @@
     "parcel-namer-custom": "^0.2.0",
     "parcel-namer-rewrite": "^2.0.0-rc.2",
     "postcss-preset-env": "^7.4.3",
+    "rimraf": "^3.0.2",
     "sharp": "^0.29.1"
   },
   "dependencies": {
