npm: remove hoist

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browserslist": "last 2 versions, > 0.5%, IE >= 10",
   "scripts": {
     "dev": "yarn clean && parcel src/*.html",
-    "build": "yarn clean && parcel build src/*.html --no-optimize --no-source-maps --no-scope-hoist",
+    "build": "yarn clean && parcel build src/*.html --no-optimize --no-source-maps",
     "clean": "rimraf dist && rimraf .parcel-cache"
   },
   "parcel-namer-custom": {
