--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.4.1",
+    "flex-gap-polyfill": "^4.1.0",
     "parcel": "^2.4.1",
     "parcel-namer-custom": "^0.2.0",
     "parcel-namer-rewrite": "^2.0.0-rc.2",
