--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "parcel-namer-custom": "^0.2.0",
     "parcel-namer-rewrite": "^2.0.0-rc.2",
     "postcss-preset-env": "^7.4.3",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
     "sharp": "^0.29.1"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "vanilla-lazyload": "^17.7.0"
   }
 }
