--- a/.parcelrc
+++ b/.parcelrc
@@ -1,4 +1,7 @@
 {
 	"extends": "@parcel/config-default",
-  "namers": ["parcel-namer-custom", "..."]
+  "namers": ["parcel-namer-custom", "..."],
+  "compressors": {
+    "*.{html,css,js,svg,map}": ["@parcel/compressor-gzip"]
+  }
 }
