--- a/.parcelrc
+++ b/.parcelrc
@@ -1,4 +1,5 @@
 {
 	"extends": "@parcel/config-default",
-  "namers": ["parcel-namer-custom", "..."]
+  "namers": ["parcel-namer-custom", "..."],
+  "resolvers": ["parcel-resolver-ignore", "..."]
 }
