--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "parcel": "^2.5.0",
     "parcel-namer-custom": "^0.2.0",
     "parcel-namer-rewrite": "^2.0.0-rc.2",
+    "parcel-resolver-ignore": "^2.0.0",
     "postcss-preset-env": "^7.4.3",
     "process": "^0.11.10",
     "rimraf": "^3.0.2",
