--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "browserslist": "last 2 versions, > 0.5%, IE 11",
+  "parcelIgnore": [
+    "{{*.*}}"
+  ],
   "scripts": {
     "dev": "yarn clean && parcel src/index.html",
     "build": "yarn clean && parcel build src/*.html --no-optimize --no-source-maps --no-content-hash --public-url .",
